Swagger parameters changed from 'path' to 'body' to get JSON
